--- a/src/components/landing_page/landing_page.pug
+++ b/src/components/landing_page/landing_page.pug
@@ -3,6 +3,6 @@ html
   head
     title my jade template
   body
-    .container
-        include ../header/header.pug
-        .logo
+    include ../header/header.pug
+    .main_signup
+      include ../form-register/form-register.pug
