--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,7 +1,3 @@
-$color-dark: #1F2041;
-$color-second: rgba(#1F2041, 75%);
-$color-third: rgba(#1F2041, 50%);
-$color-fourth: rgba(#1F2041, 25%);
-$color-fifth: rgba(#1F2041, 5%);
-$color-purple: #BC9CFF;
-$color-green: #6FCF97;          
+$violet-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$black-title: #1F2041;
+$violet-text: #BC9CFF;     
