--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -1,10 +1,7 @@
-.container{
-    width: 70%;
-    margin: 0 auto;
-}
-
-.logo{
-    background-image: url("/images/logo1.png");
+.main_signup{
+    background-image: url(../images/bg_signup.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     height: 300px;
-    width: 200px;
 }
