--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,6 @@
-$color-blue: #3d6cb0;
-
-body{
-    width: 100%;
-    height: auto;
-}
-
-.wrapper{
-    max-width: 1900px;
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    margin: 3vw;
-    grid-gap: 3vw;
-}
+@import "../components/variables.scss";
+@import "../components/mixins.scss";
+@import "../components/main_ui/main_ui.scss";
+@import "../components/header/header.scss";
+@import "../components/landing_page/landing_page.scss";
+@import "../components/form-register/form-register.scss";
