--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,22 +1,18 @@
-nav(class="mobile-menu")
-  .container
-    label(for="show-menu" class="show-menu")
-      span Menu
-      .lines
-    input(type="checkbox" id="show-menu")
-    .logo
-    ul(id="menu")
-      li 
-        a(href="#") О нас
-      li 
-        a(href="#") Услуги
-      li 
-        a(href="#") Вакансии
-      li 
-        a(href="#") Новости
-      li 
-        a(href="#") Соглашения
-      a
-        button(class="btn-login") Войти
-      a
-        button(class="btn-register") Зарегистрироваться    
+nav(class="container header")
+  a.logo
+  input(class="menu-btn" type="checkbox" id="menu-btn")
+  label(class="menu-icon" for="menu-btn")
+    .navicon
+  ul(class="menu")
+    li
+      a О нас
+    li 
+      a Услуги
+    li
+      a Вакансии
+    li
+      a Новости
+    li 
+      a Соглашения
+    a(class='button' href='#' class="btn btn-link btn-link-menu") Войти
+    button(type="button" class="btn btn-small-violet") Зарегистрироватьcя
