--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,3 +1,7 @@
 $violet-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 $black-title: #1F2041;
 $violet-text: #BC9CFF;     
+$black-text: rgba(31, 32, 65, 0.5);
+$light-black-color: rgba(31, 32, 65, 0.5);
+$white-color: #fff;
+$black-color:  #000000;
