--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -1,6 +1,5 @@
   
   .wrap{
-    height: 646px;
     width: 380px;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.12);
@@ -8,12 +7,8 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     text-align: center;
-    height: 700px;
     margin: 0 auto;
-  }
-  
-  .title{
-    @include title;
+    padding: 40px 0 30px 0;
   }
   
   .input_text {
@@ -38,3 +33,19 @@
   .text{
     @include text;
   }
+
+  .formtext{
+    @include text;
+    color: $black-color;
+    display: flex;
+    font-size: 14px;
+  }
+
+  .flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 10px;
+  }
+
+
