--- a/src/components/landing_page/landing_page.pug
+++ b/src/components/landing_page/landing_page.pug
@@ -4,5 +4,7 @@ html
     title my jade template
   body
     include ../header/header.pug
-    .main_signup
+    .clear
+    .main-background
       include ../form-register/form-register.pug
+    include ../footer/footer.pug
