--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -1,7 +1,10 @@
-.main_signup{
-    background-image: url(../images/bg_signup.png);
+.main-background{
+    background-image: url(../images/bg.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 300px;
+    padding: 30px 0;
+}
+
+.clear{
+    clear: both;
 }
