--- a/src/components/main_ui/main_ui.scss
+++ b/src/components/main_ui/main_ui.scss
@@ -78,7 +78,6 @@
 
 .tgl {
   display: none;
-
   // add default box-sizing for this scope
   &,
   &:after,
@@ -96,6 +95,7 @@
   + .tgl-btn {
     width: 40px;
     height: 20px;
+    margin-left: 30px;
     background: #ffffff;
     /* Primary Color */
     border: 1px solid rgba(31, 32, 65, 0.25);
