change footer, add icons, add arrow for button

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -27,12 +27,16 @@ footer.footer
     .footer-list
       h3 Подписка
       p Получайте специальныe
-      input
-  .footer-about
+      input(class="input-footer" placeholder="Email")
+  .footer-about.flex
       .copyright Copyright &copy; 2018 Toxin отель. Все права зачищены.
-        i.bnb-icon
-          svg
       ul.about-list
         li
           a
-            i(class="social-icon")
+            i(class="social-icon icon-twitter")
+        li
+          a
+            i(class="social-icon icon-facebook")
+        li
+          a
+            i(class="social-icon icon-instagram")
