--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,5 +1,5 @@
 nav(class="container header")
-  a.logo
+  a.logo.logo-menu
   input(class="menu-btn" type="checkbox" id="menu-btn")
   label(class="menu-icon" for="menu-btn")
     .navicon
