--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -42,8 +42,15 @@ a:hover {
 .footer {
     padding: 10px 200px;
     border-top: 1px solid #dbdbdb;
-    background-color: #F4F1F1;
+    background-color: $white-color;
     /*bg color*/
+}
+
+.footer-list p{
+    @include text;
+    color: $black-text;
+    padding-top: 20px;
+    line-height: 24px;
 }
 
 .footer li {
@@ -113,6 +120,10 @@ a:hover {
     padding-bottom: 10px;
 }
 
+.input-footer{
+    @include input-footer;
+}
+
 .copyright {
     display: flex;
     align-items: center;
@@ -145,7 +156,6 @@ a:hover {
     margin: 0 5px;
     /*space between social icons*/
 }
-
 
 /** Viewport <= 800px **/
 
