--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -110,3 +110,27 @@
   /* Dark 100% */
   color: $black-title;
 }
+
+@mixin input-footer{
+  width: 260px;
+  height: 44px;
+  background: #FFFFFF;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 20px;
+  background-image: url(../images/arrow.svg);
+  background-repeat: no-repeat;
+  background-position-x: 17em;
+  background-position-y: .8em;
+  top: 20px;
+  &::placeholder {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgba(31, 32, 65, 0.25);
+    padding-left: 15px;
+  }
+}
