--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -32,11 +32,12 @@ footer.footer
       .copyright Copyright &copy; 2018 Toxin отель. Все права зачищены.
       ul.about-list
         li
-          a
-            i(class="social-icon icon-twitter")
+          a(href="#")
+            i(class="fab fa-twitter" id="fon")
         li
-          a
-            i(class="social-icon icon-facebook")
+          a(href="#")
+             i(class="fab fa-facebook-f" id="fon")
         li
-          a
-            i(class="social-icon icon-instagram")
+          a(href="#")
+            i(class="fab fa-instagram" id="fon")
+         
