--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
             //- include components/main_ui/main_ui.pug
             //- include components/header/header.pug
             include components/landing_page/landing_page.pug
+            include components/signin-form/signin-form.pug
 
 
 
