--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -2,6 +2,7 @@
     background-image: url(../images/bg.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
     padding: 30px 0;
 }
 
