create page with signin-form

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -34,5 +34,5 @@ nav.container
     li
       a(href="#") Соглашения
     li 
-     a(class='button' href='./signin-form/signin-form.pug' class="btn btn-link btn-link-menu") Войти
+     a(class='button' href='signin-page.html' class="btn btn-link btn-link-menu") Войти
     button(type="button" class="btn btn-small-violet btn-menu") Зарегистрироватьcя
