--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -1,8 +1,8 @@
 .main-background{
+    min-height: 800px;;
     background-image: url(../images/bg.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
     padding: 30px 0;
 }
 
