create new mixins, clean scss files

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -5,23 +5,34 @@ footer.footer
     .footer-list
       h3 Навигация
       ul
-        li О нас
-        li Новости
-        li Служба поддержки
-        li Услуги
+        li 
+          a О нас
+        li
+          a Новости
+        li 
+          a Служба поддержки
+        li
+          a Услуги
     .footer-list
       h3 О нас
       ul
-        li О сервисе
-        li Наша команда
-        li Вакансии
-        li Инвесторы
+        li 
+          a О сервисе
+        li 
+          a Наша команда
+        li 
+          a Вакансии
+        li 
+          a Инвесторы
     .footer-list
       h3 Служба поддержки
       ul
-        li Соглашения
-        li Сообщества
-        li Связь с нами
+        li 
+          a Соглашения
+        li
+          a  Сообщества
+        li
+          a Связь с нами
     .footer-list
       h3 Подписка
       p Получайте специальныe
