--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -3,6 +3,13 @@
   margin: 0 auto;
 }
 
+@mixin logo{
+  background-image: url(../images/Logo.svg);
+  width: 105.69px;
+  height: 40px;
+  background-repeat: no-repeat;
+}
+
 @mixin input_text {
   width: 320px;
   height: 44px;
