--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,15 +17,156 @@ html, body {
     @include container;
 }
 
+.logo{
+    @include logo;
+}
+
 .main-title{
     @include title;
     margin-bottom: 20px;
   }
 
-.btn-small-violet{
+.btn-signup{
     @include btn-small-violet;
 }
 
 h3{
     @include small-title;
 }
+ol, ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
+  
+  
+.input_text {
+    @include input_text;
+  }
+  
+  .btn-width-violet{
+     @include btn-violet;
+     width: 320px;
+  }
+  
+  .btn-link{
+    @include btn-link;
+  }
+  
+  label {
+    @include label;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  
+  .text{
+    @include text;
+  }
+
+  .formtext{
+    @include text;
+    color: $black-color;
+    display: flex;
+    font-size: 14px;
+    margin-top: 12px;
+  }
+
+
+
+  .row{
+    display: flex;
+    flex-direction: row;
+}
+
+.radio-button{
+  position: relative;
+  margin-top: -30px;
+  margin-left: 10px;
+  & ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+     display: flex;
+    flex-direction: row;
+    & li{
+      color: #AAAAAA;
+      display: block;
+      position: relative;
+      float: left;
+      & .check{
+        display: block;
+        position: absolute;
+        border-radius: 100%;
+        height: 16px;
+        width: 16px;
+        top: 30px;
+        left: 20px;
+        z-index: 5;
+        transition: border .25s linear;
+        -webkit-transition: border .25s linear;
+        border: 1px solid #8BA4F9;
+        &::before {
+          display: block;
+          position: absolute;
+          content: '';
+          border-radius: 100%;
+          height: 10px;
+          width: 10px;
+          top: 2px;
+          left: 2px;
+          margin: auto;
+          transition: background 0.25s linear;
+          -webkit-transition: background 0.25s linear;
+ }
+}
+      & input[type=radio]{
+        position: absolute;
+        visibility: hidden;
+          
+ }
+      & label{
+        display: block;
+        position: relative;
+        font-size: 20px;
+        line-height: 24px;
+        padding: 18px 10px 25px 50px;
+        margin: 10px auto;
+        height: 30px;
+        z-index: 9;
+        cursor: pointer;
+        -webkit-transition: all 0.25s linear;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+ }
+}
+}
+}
+
+
+
+.radio-button ul li:hover label{
+  color: rgba(31, 32, 65, 0.5);;
+}
+
+.radio-button ul li:hover .check {
+  border: 3px solid #BC9CFF;
+}
+
+
+.radio-button input[type=radio]:checked ~ .check {
+  border: 1px solid #8BA4F9;
+}
+
+.radio-button input[type=radio]:checked ~ .check::before{
+  background: #8BA4F9;
+}
+
+.radio-button input[type=radio]:checked ~ label{
+  color: rgba(31, 32, 65, 0.75);;
+}
+
+
