--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 }
 
-@mixin logo{
+@mixin logo {
   background-image: url(../images/Logo.svg);
   width: 105.69px;
   height: 40px;
@@ -59,7 +59,7 @@
 @mixin btn-violet {
   border: none;
   padding: 15px 10px;
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+  background: red;
   border-radius: 22px;
   text-transform: uppercase;
   color: $white-color;
@@ -90,7 +90,6 @@
   @include btn-text;
   color: $black-title;
   text-align: left;
-  padding-left: 30px;
 }
 
 @mixin text {
@@ -118,10 +117,10 @@
   color: $black-title;
 }
 
-@mixin input-footer{
+@mixin input-footer {
   width: 260px;
   height: 44px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 4px;
@@ -129,7 +128,7 @@
   background-image: url(../images/arrow.svg);
   background-repeat: no-repeat;
   background-position-x: 17em;
-  background-position-y: .8em;
+  background-position-y: 0.8em;
   top: 20px;
   &::placeholder {
     font-family: Montserrat;
@@ -140,4 +139,13 @@
     color: rgba(31, 32, 65, 0.25);
     padding-left: 15px;
   }
+}
+
+@mixin input-date {
+  width: 150px;
+  height: 44px;
+  border: 1px solid $light-black-color;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: block;
 }
