--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -6,9 +6,12 @@
     box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    text-align: center;
     margin: 0 auto;
     padding: 40px 0 30px 0;
+  }
+
+  .container-form{
+    padding: 40px 30px 30px 30px;
   }
 
   .flex{
@@ -17,98 +20,3 @@
     justify-content: space-around;
     margin-top: 10px;
   }
-
-  // .cont{
-  //   display: block;
-  //   position: relative;
-  //   margin-top: -30px;
-  //   margin-left: 10px;
-  // }
-  
-  // .cont ul{
-  //   list-style: none;
-  //   margin: 0;
-  //   padding: 0;
-  //   overflow: auto;
-  //   display: flex;
-  // }
-  
-  // .cont ul li{
-  //   color: #AAAAAA;
-  //   display: block;
-  //   position: relative;
-  //   float: left;
-  // }
-  
-  // .cont ul li input[type=radio]{
-  //   position: absolute;
-  //   visibility: hidden;
-  // }
-  
-  // .cont ul li label{
-  //   display: block;
-  //   position: relative;
-  //   font-size: 20px;
-  //   line-height: 24px;
-  //   padding: 18px 10px 25px 50px;
-  //   margin: 10px auto;
-  //   height: 30px;
-  //   z-index: 9;
-  //   cursor: pointer;
-  //   -webkit-transition: all 0.25s linear;
-  //   font-weight: normal;
-  //   font-size: 14px;
-  //   line-height: 24px;
-  // }
-  
-  // .cont ul li:hover label{
-  //   color: rgba(31, 32, 65, 0.5);;
-  // }
-  
-  // .cont ul li .check{
-  //   display: block;
-  //   position: absolute;
-  //   border-radius: 100%;
-  //   height: 16px;
-  //   width: 16px;
-  //   top: 30px;
-  //   left: 20px;
-  //   z-index: 5;
-  //   transition: border .25s linear;
-  //   -webkit-transition: border .25s linear;
-  //   border: 1px solid #8BA4F9;
-  // }
-  
-  // .cont ul li:hover .check {
-  //   border: 3px solid #BC9CFF;
-  // }
-  
-  // .cont ul li .check::before {
-  //   display: block;
-  //   position: absolute;
-  //   content: '';
-  //   border-radius: 100%;
-  //   height: 10px;
-  //   width: 10px;
-  //   top: 2px;
-  //   left: 2px;
-  //   margin: auto;
-  //   transition: background 0.25s linear;
-  //   -webkit-transition: background 0.25s linear;
-  // }
-  
-  // .cont  input[type=radio]:checked ~ .check {
-  //   border: 1px solid #8BA4F9;
-  // }
-  
-  // .cont input[type=radio]:checked ~ .check::before{
-  //   background: #8BA4F9;
-  // }
-  
-  // .cont input[type=radio]:checked ~ label{
-  //   color: rgba(31, 32, 65, 0.75);;
-  // }
-  
-  
-  
-
