--- a/src/index.pug
+++ b/src/index.pug
@@ -10,8 +10,9 @@ html(lang="en")
         .wrapper    
             //- include components/main_ui/main_ui.pug
             //- include components/header/header.pug
-            include components/landing_page/landing_page.pug
+            //- include components/landing_page/landing_page.pug
             //- include components/signin-page/signin-page.pug
+            include components/search-page/search-page.pug
 
 
 
