--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,98 +5,116 @@
 @import "../components/form-register/form-register.scss";
 @import "../components/footer/footer.scss";
 @import "../components/landing_page/landing_page.scss";
+@import "../components/form-search/form-search.scss";
 
-
-
-html, body {
-    margin: 0;
-    height: 100%;
-}
-  
-.container{
-    @include container;
+html,
+body {
+  margin: 0;
+  height: 100%;
 }
 
-.logo{
-    @include logo;
+.container {
+  @include container;
 }
 
-.main-title{
-    @include title;
-    margin-bottom: 20px;
-  }
-
-.btn-signup{
-    @include btn-small-violet;
+.logo {
+  @include logo;
 }
 
-h3{
-    @include small-title;
+.main-title {
+  @include title;
+  margin-bottom: 20px;
 }
-ol, ul {
-    list-style: none;
+
+.btn-signup {
+  @include btn-small-violet;
+}
+
+h3 {
+  @include small-title;
+}
+ol,
+ul {
+  list-style: none;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-  
-  
+
 .input_text {
-    @include input_text;
-  }
-  
-  .btn-width-violet{
-     @include btn-violet;
-     width: 320px;
-  }
-  
-  .btn-link{
-    @include btn-link;
-  }
-  
-  label {
-    @include label;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: 5px;
-  }
-  
-  .text{
-    @include text;
-  }
-
-  .formtext{
-    @include text;
-    color: $black-color;
-    display: flex;
-    font-size: 14px;
-    margin-top: 12px;
-  }
-
-
-
-  .row{
-    display: flex;
-    flex-direction: row;
+  @include input_text;
 }
 
-.radio-button{
+.btn-width-violet {
+  width: 320px;
+  height: 44px;
+  background-color: #bc9cff;
+  border-radius: 22px;
+  border: none;
+  box-sizing: border-box;
+  border-radius: 22px;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  /* identical to box height */
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  margin-top: 20px;
+  background-image: url(../images/white-arrow.svg);
+  background-repeat: no-repeat;
+  background-position-x: 23em;
+  background-position-y: 0.9em;
+  top: 20px;
+}
+
+.btn-link {
+  @include btn-link;
+}
+
+.label {
+  @include label;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.text {
+  @include text;
+}
+
+.formtext {
+  @include text;
+  color: $black-color;
+  display: flex;
+  font-size: 14px;
+  margin-top: 12px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.radio-button {
   position: relative;
   margin-top: -30px;
   margin-left: 10px;
-  & ul{
+  & ul {
     list-style: none;
     margin: 0;
     padding: 0;
     overflow: auto;
-     display: flex;
+    display: flex;
     flex-direction: row;
-    & li{
-      color: #AAAAAA;
+    & li {
+      color: #aaaaaa;
       display: block;
       position: relative;
       float: left;
-      & .check{
+      & .check {
         display: block;
         position: absolute;
         border-radius: 100%;
@@ -105,13 +123,13 @@ a {
         top: 30px;
         left: 20px;
         z-index: 5;
-        transition: border .25s linear;
-        -webkit-transition: border .25s linear;
-        border: 1px solid #8BA4F9;
+        transition: border 0.25s linear;
+        -webkit-transition: border 0.25s linear;
+        border: 1px solid #8ba4f9;
         &::before {
           display: block;
           position: absolute;
-          content: '';
+          content: "";
           border-radius: 100%;
           height: 10px;
           width: 10px;
@@ -120,14 +138,13 @@ a {
           margin: auto;
           transition: background 0.25s linear;
           -webkit-transition: background 0.25s linear;
- }
-}
-      & input[type=radio]{
+        }
+      }
+      & input[type="radio"] {
         position: absolute;
         visibility: hidden;
-          
- }
-      & label{
+      }
+      & label {
         display: block;
         position: relative;
         font-size: 20px;
@@ -141,32 +158,32 @@ a {
         font-weight: normal;
         font-size: 14px;
         line-height: 24px;
- }
-}
-}
+      }
+    }
+  }
 }
 
-
-
-.radio-button ul li:hover label{
-  color: rgba(31, 32, 65, 0.5);;
+.radio-button ul li:hover label {
+  color: rgba(31, 32, 65, 0.5);
 }
 
 .radio-button ul li:hover .check {
-  border: 3px solid #BC9CFF;
+  border: 3px solid #bc9cff;
+}
+
+.radio-button input[type="radio"]:checked ~ .check {
+  border: 1px solid #8ba4f9;
+}
+
+.radio-button input[type="radio"]:checked ~ .check::before {
+  background: #8ba4f9;
+}
+
+.radio-button input[type="radio"]:checked ~ label {
+  color: rgba(31, 32, 65, 0.75);
 }
 
 
-.radio-button input[type=radio]:checked ~ .check {
-  border: 1px solid #8BA4F9;
+.input-date{
+  @include input-date;
 }
-
-.radio-button input[type=radio]:checked ~ .check::before{
-  background: #8BA4F9;
-}
-
-.radio-button input[type=radio]:checked ~ label{
-  color: rgba(31, 32, 65, 0.75);;
-}
-
-
