--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -39,14 +39,14 @@ footer.footer
       input(class="input-footer" placeholder="Email")
   .footer-about.flex
       .copyright Copyright &copy; 2018 Toxin отель. Все права зачищены.
-      ul.about-list
+      ul.about-list.row
         li
           a(href="#")
-            i(class="fab fa-twitter" id="fon")
+            i(class="fab fa-twitter icon-a")
         li
           a(href="#")
-             i(class="fab fa-facebook-f" id="fon")
+            i(class="fab fa-facebook-f" id="red")
         li
           a(href="#")
-            i(class="fab fa-instagram" id="fon")
+            i(class="fab fa-instagram" )
          
