--- a/src/components/search-page/search-page.pug
+++ b/src/components/search-page/search-page.pug
@@ -5,6 +5,7 @@ html
   body
     include ../header/header.pug
     .clear
-    .main-background
+    .main-background-search
+      p(class="slogan") Лучшие номера для вашей работы, отдыха и просто вдохновения
       include ../form-search/form-search.pug
     include ../footer/footer.pug
