--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,8 @@
 @import "../components/footer/footer.scss";
 @import "../components/landing_page/landing_page.scss";
 @import "../components/form-search/form-search.scss";
-
+@import "../components/search-page/search-page.scss";
+@import "../components/card-room/card-room.scss";
 html,
 body {
   margin: 0;
