--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
             //- include components/header/header.pug
             //- include components/landing_page/landing_page.pug
             //- include components/signin-page/signin-page.pug
-            include components/search-page/search-page.pug
-
+            //- include components/search-page/search-page.pug
+            include components/card-room/card-room.pug
 
 
